fixed message box overflow issue

--- a/styling.scss
+++ b/styling.scss
@@ -279,6 +279,7 @@ body {
     align-items: center;
     justify-content: center;
     max-width: 50vw;
+    margin: 0 2vw;
     padding: 0.5vw;
 }
 
